missing assets controller
